<resources>
    <string name="app_name">WellBe</string>
    <string name="title_post">Posts Feed</string>
    <string name="title_chat">Chat</string>
    <string name="title_add_post">Add post</string>
    <string name="title_profile">Profile</string>
    <string name="hint_password">Password</string>
    <string name="password">Password</string>
    <string name="login">Sign In</string>
    <string name="welcome_to_our_app">Welcome to our App</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? <font color='#097BFB'>Sign up</font></string>
    <string name="already_have_an_account_login">Already have an account? <font color='#097BFB'>Sign in</font></string>
    <string name="sign_up">Sign Up</string>
    <string name="registration">Sign Up</string>
    <string name="username">Username</string>
    <string name="enter_username">Username</string>
    <string name="create_post">Create post</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="mail_is_not_added">Mail </string>
    <string name="country_is_not_added">Country </string>
    <string name="city_is_not_added">City </string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="mail">Email</string>
    <string name="enter_your_mail">Enter your email</string>
    <string name="country">Country</string>
    <string name="enter_your_country">Enter your country</string>
    <string name="city">City</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="send_message">Message…</string>
    <string name="my_posts">My Posts</string>
    <string name="create">Create</string>
    <string name="title">Title</string>
    <string name="enter_your_title">Enter a title</string>
    <string name="content">Content</string>
    <string name="enter_your_content">Enter a description</string>
    <string name="enter_your_tag">Add tag</string>
    <string name="tag">Tag</string>
    <string name="visibility">Visibility</string>
    <string name="color">Color</string>
    <string name="pick_color">Pick Color</string>
    <string name="pick">Pick</string>
    <string name="pick_your_color">Pick your color</string>
    <string name="edit_post">Edit post</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="chats_title">Chats</string>
    <string name="tab_name_recent">RECENT</string>
    <string name="tab_name_my">MY</string>
    <string name="tab_name_popular">POPULAR</string>
    <string name="tab_name_favorites">FAVORITES</string>
    <string name="description">Description</string>
    <string name="background_color">Background Color</string>
    <string name="personal_info">Personal Info</string>
    <string name="notifications">Notifications</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="log_out">Log Out</string>
    <string name="notification">Notification</string>
    <string name="join_chat">Join Chat</string>
    <string name="available_soon">Will be available soon!</string>
    <string name="log_in_successfully">Successfully Log In</string>
    <string name="sign_up_successfully">Successfully Sign up</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="post_has_created">Post has created</string>
    <string name="post_has_changed">Post has changed</string>
    <string name="sign_color">Sign color</string>
    <string name="sign_type">Sign type</string>
    <string name="none">None</string>
    <string name="blot">Blot</string>
    <string name="cloud">Cloud</string>
    <string name="flowers">Flowers</string>
    <string name="heart">Heart</string>
    <string name="spot">Spot</string>
    <string name="stars">Stars</string>
</resources>