<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_selector"
        android:title="@string/title_post" />

    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/ic_chat_selector"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_creation_post"
        android:title="@string/title_add_post"/>

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notification_selector"
        android:title="@string/notification" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_selector"
        android:title="@string/title_profile" />

</menu>