<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragment.profile.ProfileFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_compat_rounded_bold"
        android:text="@string/title_profile"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/toolbar_restrict_hor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/toolbar_restrict_hor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="?attr/actionBarSize" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_profile_icon_big"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginTop="32dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_restrict_hor"
        app:shapeAppearanceOverlay="@style/RoundedImageView"
        tools:src="@drawable/avatar_static" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sf_compat_rounded_bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile_icon_big"
        tools:text="Janette Doe" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/mail_is_not_added"
        android:textColor="#979797"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        tools:text="example@gmail.com" />

    <TextView
        android:id="@+id/tv_personal_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="20dp"
        android:drawablePadding="12dp"
        android:fontFamily="@font/sf_compat_rounded_semibold"
        android:gravity="center|start"
        android:text="@string/personal_info"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/ic_arrow_right"
        app:drawableStartCompat="@drawable/ic_personal_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email" />

    <TextView
        android:id="@+id/tv_notifications"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:drawablePadding="12dp"
        android:fontFamily="@font/sf_compat_rounded_semibold"
        android:gravity="center|start"
        android:text="@string/notifications"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/ic_arrow_right"
        app:drawableStartCompat="@drawable/ic_notifications_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_personal_info" />

    <TextView
        android:id="@+id/tv_dark_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:drawablePadding="12dp"
        android:fontFamily="@font/sf_compat_rounded_semibold"
        android:gravity="center|start"
        android:text="@string/dark_mode"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/ic_arrow_right"
        app:drawableStartCompat="@drawable/ic_dark_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_notifications" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="#EEEEEE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dark_mode" />

    <TextView
        android:id="@+id/tv_log_out"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:drawablePadding="12dp"
        android:fontFamily="@font/sf_compat_rounded_semibold"
        android:gravity="center|start"
        android:text="@string/log_out"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/ic_arrow_right"
        app:drawableStartCompat="@drawable/ic_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

</androidx.constraintlayout.widget.ConstraintLayout>